--- a/ExampleCodePlayground/ExampleCodePlayground.csproj
+++ b/ExampleCodePlayground/ExampleCodePlayground.csproj
@@ -42,8 +42,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetVault" Version="0.2.5.10-beta" />
-    <PackageReference Include="HighPrecisionTimeStamps" Version="0.1.1-beta" PrivateAssets="All" GeneratePathProperty="true" />
+    <PackageReference Include="DotNetVault" Version="0.2.5.12" />
+    <PackageReference Include="HighPrecisionTimeStamps" Version="0.1.1-beta" />
     <PackageReference Include="JetBrains.Annotations" Version="2021.2.0" />
     <PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
   </ItemGroup>
