--- a/Clorton Game/ClortonGameDemo/ClortonGameDemo.csproj
+++ b/Clorton Game/ClortonGameDemo/ClortonGameDemo.csproj
@@ -13,8 +13,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetVault" Version="0.2.5.15-beta" />
-    <PackageReference Include="HighPrecisionTimeStamps" Version="0.1.1-beta" />
+    <PackageReference Include="DotNetVault" Version="0.2.5.18" />
+    <PackageReference Include="HighPrecisionTimeStamps" Version="1.0.0" />
     <PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
   </ItemGroup>
 
