--- a/DotNetVaultQuickStart/DotNetVaultQuickStart.csproj
+++ b/DotNetVaultQuickStart/DotNetVaultQuickStart.csproj
@@ -28,8 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetVault" Version="0.2.5.15-beta" />
-    <PackageReference Include="HighPrecisionTimeStamps" Version="0.1.1-beta" />
+    <PackageReference Include="DotNetVault" Version="0.2.5.18" />
     <PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
   </ItemGroup>
 
