--- a/VaultUnitTests/VaultUnitTests.csproj
+++ b/VaultUnitTests/VaultUnitTests.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="HighPrecisionTimeStamps" Version="0.1.1-beta" />
+    <PackageReference Include="HighPrecisionTimeStamps" Version="1.0.0" />
     <PackageReference Include="JetBrains.Annotations" Version="2021.2.0" />
     <PackageReference Include="JetBrains.DotMemoryUnit" Version="3.1.20200127.214830" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
