--- a/DotNetVault/DotNetVault.csproj
+++ b/DotNetVault/DotNetVault.csproj
@@ -19,7 +19,7 @@
 
   <PropertyGroup>
     <PackageId>DotNetVault</PackageId>
-    <PackageVersion>0.2.5.18</PackageVersion>
+    <PackageVersion>0.9.9.0-alpha</PackageVersion>
     <Owners>CJM Screws, LLC</Owners>
     <Authors>Christopher Susie</Authors>
     <PackageProjectUrl>https://github.com/cpsusie/DotNetVault</PackageProjectUrl>
@@ -39,6 +39,8 @@
       A guided tour / quick start guide for this project's functionality can be found here: https://github.com/cpsusie/DotNetVault/blob/v0.2.5.x/Quick_Start_Functionality_Tour.md 
     </Description>
     <PackageReleaseNotes>
+      RELEASE NOTES VERSION 1.0:
+      Official Release of DotNetVault.  See prior release notes for features.  This release updates the official documentation for this release version.
       RELEASE NOTES VERSION 0.2.5.18:
       Non-beta release using version 1.0 of High Precision Timestamps.  Originally beta tested via version 0.1.1.0-beta in DotNetVault version 0.2.5.10-beta et seq.  Dependency on HpTimestamps changed from included dll to a dependency on package.
       Also, added a new (minor) feature: the [ReportWhiteListLocationsAttribute], when applied to a struct or class, will emit a compiler warning giving you the path of the vaultsafewhitelist and the conditionally vault safe generic whitelist files.  This enables users on varied systems to locate these files.
@@ -53,12 +55,12 @@
     <PackageTags>DotNetVault, analyzers, synchronization, thread-safety, threadsafe, deadlock, deadlock-prevention</PackageTags>
     <NoPackageAnalysis>true</NoPackageAnalysis>
     <LangVersion>8.0</LangVersion>
-    <Version>0.2.5.18</Version>
+    <Version>0.9.9.0</Version>
     <AssemblyName>DotNetVault</AssemblyName>
     <RootNamespace>DotNetVault</RootNamespace>
     <Company>CJM Screws, LLC</Company>
-    <AssemblyVersion>0.2.5.18</AssemblyVersion>
-    <FileVersion>0.2.5.18</FileVersion>
+    <AssemblyVersion>0.9.9.0</AssemblyVersion>
+    <FileVersion>0.9.9.0</FileVersion>
     <PackageLicenseFile>license.txt</PackageLicenseFile>
   </PropertyGroup>
 
@@ -93,8 +95,21 @@
     <None Remove="bin\**" />
     <None Remove="Resources\**" />
     <Content Remove="C:\Users\Christopher Susie\.nuget\packages\highprecisiontimestamps\0.1.0\contentFiles\any\netstandard2.0\Readme.md" />
-    <None Remove="license.txt" />
-    <None Remove="README.md" />
+    <None Include="..\DotNetVault_Description_v1.0.pdf" Link="DotNetVault_Description_v1.0.pdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\QuickStart_Install_VS2019_Windows.md" Link="QuickStart_Install_VS2019_Windows.md">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\Quick_Start_Functionality_Tour.md" Link="Quick_Start_Functionality_Tour.md">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\Quick_Start_Install_Rider_Amazon_Linux.md" Link="Quick_Start_Install_Rider_Amazon_Linux.md">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\README.md" Link="README.md">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="license.txt">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
@@ -107,6 +122,13 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <Pack>True</Pack>
     </AdditionalFiles>
+  </ItemGroup>
+
+ 
+  <ItemGroup>
+    <Content Include="..\readme.txt" Link="readme.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
@@ -126,6 +148,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="MonitorVault.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
     <Compile Update="Resources.Designer.cs" DesignTime="True" AutoGen="True" DependentUpon="Resources.resx" />
     <Compile Update="TypeSymbolVsTpAnalysisResultPrinterSource.cs">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
@@ -136,6 +161,14 @@
   <ItemGroup>
     <None Update="tools\*.ps1" CopyToOutputDirectory="Always" Pack="true" PackagePath="" />
     <None Include="$(OutputPath)\HighPrecisionTimeStamps.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+    <None Include="$(OutputPath)\license.txt" Pack="true" PackagePath="Docs" Visible="false" />
+    <None Include="$(OutputPath)\Quick_Start_Functionality_Tour.md" Pack="true" PackagePath="Docs" Visible="false" />
+    <None Include="$(OutputPath)\Quick_Start_Install_Rider_Amazon_Linux.md" Pack="true" PackagePath="Docs" Visible="false" />
+    <None Include="$(OutputPath)\QuickStart_Install_VS2019_Windows.md" Pack="true" PackagePath="Docs" Visible="false" />
+    <None Include="$(OutputPath)\README.md" Pack="true" PackagePath="Docs" Visible="false" />
+    <None Include="$(OutputPath)\RELEASE.txt" Pack="true" PackagePath="Docs" Visible="false" />
+    <None Include="$(OutputPath)\readme.txt" Pack="true" PackagePath="Docs" Visible="false" />
+    <None Include="$(OutputPath)\DotNetVault_Description_v1.0.pdf" Pack="true" PackagePath="Docs" Visible="false" />
     <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="true" />
     <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="lib/netstandard2.0/" Visible="true" />
     <None Include="$(OutputPath)\$(AssemblyName).xml" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="true" />
@@ -143,19 +176,14 @@
     <None Include="$(OutputPath)\$(AssemblyName).pdb" Pack="true" PackagePath="lib/netstandard2.0/" Visible="true" />
   </ItemGroup>
   <ItemGroup>
-   <None Update="readme.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <Pack>True</Pack>
-      <Visible>True</Visible>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
     <Folder Include="Include\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Update="C:\Users\Christopher Susie\.nuget\packages\highprecisiontimestamps\0.1.1-beta\contentFiles\any\netstandard2.0\LICENSE">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <None Update="license.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="RELEASE.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
-
 </Project>
