--- a/ExampleCodePlayground/ExampleCodePlayground.csproj
+++ b/ExampleCodePlayground/ExampleCodePlayground.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
 
   <ItemGroup>
-	<PackageReference Include="DotNetVault" Version="0.2.5.18" />
+	<PackageReference Include="DotNetVault" Version="0.9.9-alpha" />
     <PackageReference Include="HighPrecisionTimeStamps" Version="1.0.0" />
     <PackageReference Include="JetBrains.Annotations" Version="2021.2.0" />
     <PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
