--- a/ConsoleStressTest/ConsoleStressTest.csproj
+++ b/ConsoleStressTest/ConsoleStressTest.csproj
@@ -17,8 +17,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetVault" Version="0.9.9-alpha" />
-    <PackageReference Include="HighPrecisionTimeStamps" Version="1.0.0" />
+    <PackageReference Include="DotNetVault" Version="1.0.0" />
+    <PackageReference Include="HighPrecisionTimeStamps" Version="1.0.0.1" />
     <PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
   </ItemGroup>
 
