--- a/ExampleCodePlayground/ExampleCodePlayground.csproj
+++ b/ExampleCodePlayground/ExampleCodePlayground.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetVault" Version="1.0.0" />
     <PackageReference Include="JetBrains.Annotations" Version="2021.2.0" />
     <PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
   </ItemGroup>
