--- a/ExampleLaundryMachine/LaundryMachineUi/LaundryMachineUi.csproj
+++ b/ExampleLaundryMachine/LaundryMachineUi/LaundryMachineUi.csproj
@@ -14,8 +14,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetVault" Version="0.9.9-alpha" />
-    <PackageReference Include="HighPrecisionTimeStamps" Version="1.0.0" />
+    <PackageReference Include="DotNetVault" Version="1.0.0" />
+    <PackageReference Include="HighPrecisionTimeStamps" Version="1.0.0.1" />
     <PackageReference Include="JetBrains.Annotations" Version="2021.2.0" />
     <PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
   </ItemGroup>
