--- a/DotNetVault.Vsix/packages.config
+++ b/DotNetVault.Vsix/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="HighPrecisionTimeStamps" version="1.0.0.1" targetFramework="net48" />
+  <package id="HighPrecisionTimeStamps" version="1.0.0.6" targetFramework="net48" />
   <package id="JetBrains.Annotations" version="2021.2.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="5.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
