--- a/DotNetVaultQuickStart/DotNetVaultQuickStart.csproj
+++ b/DotNetVaultQuickStart/DotNetVaultQuickStart.csproj
@@ -28,7 +28,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetVault" Version="1.0.0" />
+    <PackageReference Include="DotNetVault" Version="1.0.0.1" />
+    <PackageReference Include="HighPrecisionTimeStamps" Version="1.0.0.6" />
     <PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
   </ItemGroup>
 
